fix: add javafxplugin, remove unused .bat files, enable cross-platform run